kubernetes/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
    version: "1.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api-container
          image: gmoxfr/vgr:api-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
status:
  loadBalancer: {}
