kubernetes/deployment-images.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images
  labels:
    app: images
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: images
          image: gmoxfr/vgr:images-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: images
  labels:
    app: images
spec:
  selector:
    app: images
  ports:
    - protocol: TCP
      port: 82
      targetPort: 8001
  type: LoadBalancer
status:
  loadBalancer: {}
