kubernetes/deployment-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: web
          image: gmoxfr/vgr:web-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
